--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- bootrap cdn -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <!-- owl carousal -->
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
-
+    <!-- custom style -->
     <link rel="stylesheet" href="css/style.css">
-
+    <!-- responsive -->
+    <link rel="stylesheet" href="css/responsive.css">
 
 </head>
 
@@ -22,11 +26,13 @@
             <div class="header-inner">
                 <!-- logo -->
                 <div class="logo">
-                    <a href="#"><img src="images/logo.png" alt="Grain Chain"></a>
+                    <a href="#"><img class="img-fluid" src="images/logo.png" alt="Grain Chain"></a>
                 </div>
 
                 <!-- Primary  Menu Starts here  -->
                 <nav class="primary-menu">
+                    <span class="menu-toggle menu-close"><img class="img-fluid" src="images/close.png"
+                            alt="mobile toggle"></span>
                     <ul>
                         <li><a href="#">Products</a></li>
                         <li><a href="#">Solutions</a></li>
@@ -36,7 +42,8 @@
                     </ul>
                 </nav>
                 <!-- Primary  Menu Starts here  -->
-
+                <span class="menu-toggle menu-open"><img class="img-fluid" src="images/menu-toggle.png"
+                        alt="mobile toggle"></span>
             </div>
         </div>
     </header>
@@ -56,6 +63,7 @@
 
     <!-- what we do -->
     <section class="what-we-do">
+
         <div class="container">
             <div class="what-we-do-content">
                 <h2 class="title"><span>What we do?</span></h2>
@@ -63,52 +71,97 @@
                     the global
                     agricultural Industry at every stage of supply chain. We use cutting edge technology to make the
                     process easier, faster and safer for all participants</p>
-        <button class="btn-play"><img src="images/play button Home Desktop Website GC-03.svg" alt="play btn"></button>
+                <button class="btn-play"><img src="images/play button Home Desktop Website GC-03.svg"
+                        alt="play btn"></button>
             </div>
         </div>
     </section>
     <!-- what we do -->
-
+    <!-- <div class="bg-img">
+    <img src="images/Texture-right-Home-Desktop-Website-GC.png" alt="">
+</div> -->
     <!-- how does work -->
     <section class="how-we-do">
         <div class="container">
-            <h2 class="title">How do we do it </h2>
+            <h2 class="title"><span>How do we do it</span> </h2>
             <p class="text-center">The GrainChain ecosystem can manager pre and post-harvest processes through a
                 cloud-based, blockchain and
                 IoT-enabled platform consisting of suite of cmpimentatry products:</p>
             <div class="home-products">
                 <div class="row">
                     <div class="col-md-3 col-6">
+                        <!-- home product -->
                         <div class="home-product">
                             <img class="img-fluid" src="images/trumodity.png" alt="trumodity">
                         </div>
+                        <!-- home product -->
                     </div>
                     <div class="col-md-3 col-6">
+                        <!-- home product -->
                         <div class="home-product">
                             <img class="img-fluid" src="images/Seed-audit.png" alt="seed audit">
                         </div>
+                        <!-- home product -->
                     </div>
                     <div class="col-md-3 col-6">
+                        <!-- home product -->
                         <div class="home-product">
                             <img class="img-fluid" src="images/silosys.png" alt="silosys">
                         </div>
+                        <!-- home product -->
                     </div>
                     <div class="col-md-3 col-6">
+                        <!-- home product -->
                         <div class="home-product">
                             <img class="img-fluid" src="images/harvx.png" alt="harvx">
                         </div>
+                        <!-- home product -->
                     </div>
                 </div>
             </div>
 
         </div>
     </section>
+
+
     <!-- how does work -->
     <div class="how-does-it-works">
         <div class="container">
             <div class="how-does-it-works-content">
                 <div class="top">
                     <img class="img-fluid" src="images/HHOW-IT-WORKS-block-Home-Desktop-Website-GC.png" alt="">
+                </div>
+                <div class="work-process">
+                    <h2 class="title"><span>How Does it all Work Together</span></h2>
+                    <div class="work-process-list owl-carousel owl-theme">
+                        <div class="work-process-box">
+                            <img class="img-fluid" src="images/process-1.png" alt="">
+                        </div>
+                        <div class="work-process-box">
+                            <img class="img-fluid" src="images/process-2.png" alt="">
+                        </div>
+                        <div class="work-process-box">
+                            <img class="img-fluid" src="images/process-3.png" alt="">
+                        </div>
+                        <div class="work-process-box">
+                            <img class="img-fluid" src="images/process-4.png" alt="">
+                        </div>
+                        <div class="work-process-box">
+                            <img  class="img-fluid" src="images/process-5.png" alt="">
+                        </div>
+                        <div class="work-process-box">
+                            <img class="img-fluid" src="images/process-6.png" alt="">
+                        </div>
+                        <div class="work-process-box">
+                            <img class="img-fluid" src="images/process-7.png" alt="">
+                        </div>
+                        <div class="work-process-box">
+                            <img class="img-fluid" src="images/process-8.png" alt="">
+                        </div>
+                        <div class="work-process-box">
+                            <img class="img-fluid" src="images/process-9.png" alt="">
+                        </div>
+                    </div>
                 </div>
                 <div class="bottom">
                     <h2 class="title"><span>Blockchain and Smart Contracts</span></h2>
@@ -135,6 +188,7 @@
                 <p>GrainChain has formed alliances and partnerships with governments, large corporations, and producers
                     alike inluding:</p>
             </div>
+            <!-- partner's list -->
             <ul class="partners-list owl-carousel owl-theme">
                 <li class="partner-item"><img src="images/partners/vtep-logo.png" alt=""></li>
                 <li class="partner-item"><img src="images/partners/garcia-grain.png" alt=""></li>
@@ -144,8 +198,8 @@
                 <li class="partner-item"><img src="images/partners/Linux-foundation.png" alt=""></li>
                 <li class="partner-item"><img src="images/partners/medici-ventures.png" alt=""></li>
                 <li class="partner-item"><img src="images/partners/texas-farm.png" alt=""></li>
-
             </ul>
+            <!-- partner's list -->
 
         </div>
     </section>
@@ -158,21 +212,32 @@
                 <div class="col-md-3 col-6">
                     <div class="stats-box">
                         <img src="images/comoditity-stats.png" alt="">
+                        <p>Our system has processed </p>
+                        <h3>over 12 billion</h3>
+                        <p>pounds of commodities</p>
                     </div>
                 </div>
                 <div class="col-md-3 col-6">
                     <div class="stats-box">
                         <img src="images/physical-operation-stats.png" alt="">
+                        <p>Physical operations in </p>
+                        <h3>3 countries</h3>
+                        <p></p>
                     </div>
                 </div>
                 <div class="col-md-3 col-6">
                     <div class="stats-box">
                         <img src="images/processing-commodities-stats.png" alt="">
+                        <p>Processing</p>
+                        <h3>24 diﬀerent</h3>
+                        <p>commodities</p>
                     </div>
                 </div>
                 <div class="col-md-3 col-6">
                     <div class="stats-box">
                         <img src="images/participants-stats.png" alt="">
+                        <h3>Over 2500</h3>
+                        <p>participants</p>
                     </div>
                 </div>
             </div>
@@ -184,6 +249,7 @@
     <section class="home-contact">
         <div class="container">
             <form action="">
+                <!-- form -->
                 <div class="form-wrapper">
                     <div class="form-left">
                         <h2 class="title"><span>Contact Us</span></h2>
@@ -201,17 +267,21 @@
                     </div>
                     <div class="form-right">
                         <div class="form-group">
-                            <label for="">Email</label>
+                            <label for="">Message</label>
                             <div>
                                 <textarea class="form-control" name="" id="" cols="30" rows="10"
                                     placeholder="Request a demo or ask a question..."></textarea>
                             </div>
                         </div>
                         <div class="action">
+                            <div class=" captcha ">
+                                <img class="img-fluid" src="images/captcha.png" alt="">
+                            </div>
                             <button class="btn rounded-0 btn-primary w-100" type="submit">send message</button>
                         </div>
                     </div>
                 </div>
+                <!-- form -->
             </form>
         </div>
     </section>
@@ -220,12 +290,13 @@
     <!-- footer -->
     <footer>
         <div class="container">
+            <!-- footer top -->
             <div class="footer-top">
                 <div class="row">
                     <div class="col-md-6">
                         <div class="footer-top-left">
-                            <div class="logo">
-                                <img src="images/footer-logo.png" alt="">
+                            <div class="footer-logo">
+                                <img class="img-fluid" src="images/footer-logo.png" alt="">
                             </div>
                             <div class="contact">
                                 <h4>Contact Us</h4>
@@ -271,12 +342,14 @@
                     </div>
                 </div>
             </div>
+            <!-- footer top -->
 
+            <!-- social media links` -->
             <div class="social-media">
                 <ul>
                     <li><a href="#"><img src="images/sm-icon-facebook-Home-Desktop-Website-GC.png" alt="facebook"></a>
                     </li>
-                    <li><a href="#"><img src="" alt=""></a></li>
+                    <li><a href="#"><img src="images/intagram.png" alt=""></a></li>
                     <li><a href="#"><img src="images/sm-icon-telegram-Home-Desktop-Website-GC.png" alt=""></a></li>
 
                     <li><a href="#"><img src="images/sm-icon-in-Home-Desktop-Website-GC.png" alt=""></a></li>
@@ -284,9 +357,13 @@
 
                 </ul>
             </div>
+            <!-- social media links` -->
+
+            <!-- copyright -->
             <div class="copyright">
                 <p>@2020 Copyright, GrainChain - <a href="#">Privacy Policy</a> - <a href="#">Terms of Services</a></p>
             </div>
+            <!-- copyright -->
         </div>
     </footer>
     <!-- footer -->
