--- a/index.html
+++ b/index.html
@@ -92,28 +92,33 @@
                     <div class="col-md-3 col-6">
                         <!-- home product -->
                         <div class="home-product">
-                            <img class="img-fluid" src="images/trumodity.png" alt="trumodity">
+                            <img class="img-fluid" src="images/Trumod-button-off-Home-Desktop-Website-GC.png" alt="trumodity">
+                            <h4>Transaction Platform</h4>
+                            <!-- <img class="hover-img" src="images/trumodity.png" alt=""> -->
                         </div>
                         <!-- home product -->
                     </div>
                     <div class="col-md-3 col-6">
                         <!-- home product -->
-                        <div class="home-product">
-                            <img class="img-fluid" src="images/Seed-audit.png" alt="seed audit">
+                        <div class="home-product yellow">
+                            <img class="img-fluid" src="images/Seed-audit-button-off-Home-Desktop-Website-GC.png" alt="seed audit">
+                            <h4>Preharvest Management</h4>
+                        </div>
+                        <!-- home product -->
+                    </div>
+                    <div class="col-md-3 col-6 green">
+                        <!-- home product -->
+                        <div class="home-product blue">
+                            <img class="img-fluid" src="images/ss-button-off-Home-Desktop-Website-GC.png" alt="silosys">
+                            <h4>Inventory Management</h4>
                         </div>
                         <!-- home product -->
                     </div>
                     <div class="col-md-3 col-6">
                         <!-- home product -->
-                        <div class="home-product">
-                            <img class="img-fluid" src="images/silosys.png" alt="silosys">
-                        </div>
-                        <!-- home product -->
-                    </div>
-                    <div class="col-md-3 col-6">
-                        <!-- home product -->
-                        <div class="home-product">
-                            <img class="img-fluid" src="images/harvx.png" alt="harvx">
+                        <div class="home-product red">
+                            <img class="img-fluid" src="images/HarvX-button-off-Home-Desktop-Website-GC.png" alt="harvx">
+                            <h4>Logistics </h4>
                         </div>
                         <!-- home product -->
                     </div>
