--- a/index.html
+++ b/index.html
@@ -51,7 +51,17 @@
     <!-- header ends her -->
     <section class="banner">
         <div class="container">
-            <div class="banner-item-list">
+            <div class="banner-item-list owl-theme owl-carousel">
+                <div class="banner-item">
+                    <h1 class="banner-title">Creating Supply Chain Efficiency</h1>
+                    <button class="btn btn-primary">Book A Demo</button>
+                    <img class="img-fluid banner-img" src="images/banner-img.png" alt="banner image">
+                </div>
+                <div class="banner-item">
+                    <h1 class="banner-title">Creating Supply Chain Efficiency</h1>
+                    <button class="btn btn-primary">Book A Demo</button>
+                    <img class="img-fluid banner-img" src="images/banner-img.png" alt="banner image">
+                </div>
                 <div class="banner-item">
                     <h1 class="banner-title">Creating Supply Chain Efficiency</h1>
                     <button class="btn btn-primary">Book A Demo</button>
@@ -67,9 +77,9 @@
         <div class="container">
             <div class="what-we-do-content">
                 <h2 class="title"><span>What we do?</span></h2>
-                <p class="text-center">GrainChain creates innovative Solutions to solve the complex challenges facing
-                    the global
-                    agricultural Industry at every stage of supply chain. We use cutting edge technology to make the
+                <p>GrainChain creates innovative Solutions to solve the complex challenges facing
+                    the global agricultural Industry at every stage of supply chain. We use cutting edge technology to
+                    make the
                     process easier, faster and safer for all participants</p>
                 <button class="btn-play"><img src="images/play button Home Desktop Website GC-03.svg"
                         alt="play btn"></button>
@@ -82,50 +92,81 @@
 </div> -->
     <!-- how does work -->
     <section class="how-we-do">
-        <div class="container">
-            <h2 class="title"><span>How do we do it</span> </h2>
-            <p class="text-center">The GrainChain ecosystem can manager pre and post-harvest processes through a
-                cloud-based, blockchain and
-                IoT-enabled platform consisting of suite of cmpimentatry products:</p>
-            <div class="home-products">
-                <div class="row">
-                    <div class="col-md-3 col-6">
-                        <!-- home product -->
-                        <div class="home-product">
-                            <img class="img-fluid" src="images/Trumod-button-off-Home-Desktop-Website-GC.png" alt="trumodity">
-                            <h4>Transaction Platform</h4>
-                            <!-- <img class="hover-img" src="images/trumodity.png" alt=""> -->
+        <img class="img-fluid" src="images/grey-bg-begining-Home-Desktop-Website-GC.png" alt="">
+        <div class="how-we-do-inner">
+            <div class="container">
+                <h2 class="title"><span>How do we do it</span> </h2>
+                <p class="text-center">The GrainChain ecosystem can manager pre and post-harvest processes through a
+                    cloud-based, blockchain and
+                    IoT-enabled platform consisting of suite of cmpimentatry products:</p>
+                <div class="home-products">
+                    <div class="row">
+                        <div class="col-md-3 col-6">
+                            <!-- home product -->
+                            <div class="home-product yellow">
+                                <img class="img-fluid" src="images/Trumod-button-off-Home-Desktop-Website-GC.png"
+                                    alt="trumodity">
+                                <!-- <img class="img-fluid hover" src="images/trumodity.png" alt=""> -->
+                                <div class="hover"></div>
+                                <div class="product-bottom yellow">
+                                    <img src="images/trumod-logo.png" alt="" class="bottom-logo img-fluid">
+                                    <h4 class="text-white">Preharvest Management</h4>
+                                </div>
+
+                            </div>
+                            <!-- home product -->
                         </div>
-                        <!-- home product -->
-                    </div>
-                    <div class="col-md-3 col-6">
-                        <!-- home product -->
-                        <div class="home-product yellow">
-                            <img class="img-fluid" src="images/Seed-audit-button-off-Home-Desktop-Website-GC.png" alt="seed audit">
-                            <h4>Preharvest Management</h4>
+                        <div class="col-md-3 col-6">
+                            <!-- home product -->
+                            <div class="home-product green">
+                                <img class="img-fluid" src="images/Seed-audit-button-off-Home-Desktop-Website-GC.png"
+                                    alt="seed audit">
+                                <!-- <img class="img-fluid hover" src="images/Seed-audit.png" alt=""> -->
+                                <div class="hover"></div>
+                                <div class="product-bottom">
+                                    <img src="images/seed-audit-logo.png" alt="" class="bottom-logo img-fluid">
+                                    <h4 class="text-white">Preharvest Management</h4>
+                                </div>
+
+                            </div>
+                            <!-- home product -->
                         </div>
-                        <!-- home product -->
-                    </div>
-                    <div class="col-md-3 col-6 green">
-                        <!-- home product -->
-                        <div class="home-product blue">
-                            <img class="img-fluid" src="images/ss-button-off-Home-Desktop-Website-GC.png" alt="silosys">
-                            <h4>Inventory Management</h4>
+                        <div class="col-md-3 col-6 blue">
+                            <!-- home product -->
+                            <div class="home-product blue">
+                                <img class="img-fluid" src="images/ss-button-off-Home-Desktop-Website-GC.png"
+                                    alt="silosys">
+                                <!-- <img class="img-fluid hover" src="images/silosys.png" alt=""> -->
+
+                                <div class="hover"></div>
+                                <div class="product-bottom">
+                                    <img src="images/silosys-logo.png" alt="" class="bottom-logo img-fluid">
+                                    <h4 class="text-white">Inventory Management</h4>
+                                </div>
+
+                            </div>
+                            <!-- home product -->
                         </div>
-                        <!-- home product -->
-                    </div>
-                    <div class="col-md-3 col-6">
-                        <!-- home product -->
-                        <div class="home-product red">
-                            <img class="img-fluid" src="images/HarvX-button-off-Home-Desktop-Website-GC.png" alt="harvx">
-                            <h4>Logistics </h4>
+                        <div class="col-md-3 col-6">
+                            <!-- home product -->
+                            <div class="home-product red">
+                                <img class="img-fluid" src="images/HarvX-button-off-Home-Desktop-Website-GC.png"
+                                    alt="harvx">
+                                <!-- <img class="img-fluid hover" src="images/harvx.png" alt=""> -->
+                                <div class="hover"></div>
+                                <div class="product-bottom">
+                                    <img src="images/harvx-logo.png" alt="" class="bottom-logo img-fluid">
+                                    <h4 class="text-white">Logistics</h4>
+                                </div>
+                            </div>
+                            <!-- home product -->
                         </div>
-                        <!-- home product -->
                     </div>
                 </div>
-            </div>
 
+            </div>
         </div>
+    
     </section>
 
 
@@ -134,6 +175,7 @@
         <div class="container">
             <div class="how-does-it-works-content">
                 <div class="top">
+                    <h2 class="title"><span>How does it work?</span></h2>
                     <img class="img-fluid" src="images/HHOW-IT-WORKS-block-Home-Desktop-Website-GC.png" alt="">
                 </div>
                 <div class="work-process">
@@ -152,7 +194,7 @@
                             <img class="img-fluid" src="images/process-4.png" alt="">
                         </div>
                         <div class="work-process-box">
-                            <img  class="img-fluid" src="images/process-5.png" alt="">
+                            <img class="img-fluid" src="images/process-5.png" alt="">
                         </div>
                         <div class="work-process-box">
                             <img class="img-fluid" src="images/process-6.png" alt="">
