--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Grain Chain</title>
     <!-- bootrap cdn -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -77,10 +77,9 @@
         <div class="container">
             <div class="what-we-do-content">
                 <h2 class="title"><span>What we do?</span></h2>
-                <p>GrainChain creates innovative Solutions to solve the complex challenges facing
-                    the global agricultural Industry at every stage of supply chain. We use cutting edge technology to
-                    make the
-                    process easier, faster and safer for all participants</p>
+                <p>GrainChain creates innovative solutions to solve the complex challenges facing the global
+                    agricultural industry at every stage of the supply chain. We use cutting edge technology to make the
+                    process easier, faster and safer for all participants.</p>
                 <button class="btn-play"><img src="images/play button Home Desktop Website GC-03.svg"
                         alt="play btn"></button>
             </div>
@@ -96,9 +95,9 @@
         <div class="how-we-do-inner">
             <div class="container">
                 <h2 class="title"><span>How do we do it</span> </h2>
-                <p class="text-center">The GrainChain ecosystem can manager pre and post-harvest processes through a
-                    cloud-based, blockchain and
-                    IoT-enabled platform consisting of suite of cmpimentatry products:</p>
+                <p class="text-center">The GrainChain system is capable of managing all pre and post-harvest processes
+                    through a cloud-based, blockchain-enabled platform consisting of a suite of complimentary products
+                </p>
                 <div class="home-products">
                     <div class="row">
                         <div class="col-md-3 col-6">
@@ -110,7 +109,7 @@
                                 <div class="hover"></div>
                                 <div class="product-bottom yellow">
                                     <img src="images/trumod-logo.png" alt="" class="bottom-logo img-fluid">
-                                    <h4 class="text-white">Preharvest Management</h4>
+                                    <h4 class="text-white">Transaction Platform</h4>
                                 </div>
 
                             </div>
@@ -166,7 +165,7 @@
 
             </div>
         </div>
-    
+
     </section>
 
 
@@ -213,12 +212,11 @@
                 <div class="bottom">
                     <h2 class="title"><span>Blockchain and Smart Contracts</span></h2>
                     <h3>Fast and secure transactions for real commodities</h3>
-                    <p>GrainChain pairs the security and traceability of blockchain technology with the eﬃciency and
-                        reliability of self-executing smart contracts to ensure producers get paid quickly, buyers
-                        receive immediate tradable title to commodities, and lien holders and other payees are paid
-                        ﬁrst. </p>
-                    <p>Our patent-pending solution is leveling the playing ﬁeld for participants across the entire
-                        supply chain</p>
+                    <p>GrainChain pairs the security and traceability of blockchain technology with the efficiency and
+                        reliability of self-executing smart contracts to ensure producers get paid quickly, buyers receive
+                        immediate tradable title to commodities, and lien holders and other payees are paid first.
+                         </p>
+                    <p>Our patent-pending solution is leveling the playing field for participants across the entire supply chain.</p>
                     <div class="action">
                         <button class="btn btn-primary">Read More</button>
                     </div>
@@ -232,8 +230,7 @@
         <div class="container">
             <div class="title-wrapper">
                 <h2 class="title"><span>Our Partners</span></h2>
-                <p>GrainChain has formed alliances and partnerships with governments, large corporations, and producers
-                    alike inluding:</p>
+                <p>GrainChain has formed alliances and partnerships with governments, large corporations, and producers alike including:</p>
             </div>
             <!-- partner's list -->
             <ul class="partners-list owl-carousel owl-theme">
