--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <!-- owl carousal -->
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
+
+    <!-- animate css  -->
+    <link rel="stylesheet" href="css/animate.css">
     <!-- custom style -->
     <link rel="stylesheet" href="css/style.css">
     <!-- responsive -->
@@ -53,18 +56,25 @@
         <div class="container">
             <div class="banner-item-list owl-theme owl-carousel">
                 <div class="banner-item">
-                    <h1 class="banner-title">Creating Supply Chain Efficiency</h1>
-                    <button class="btn btn-primary">Book A Demo</button>
+                    <h1 class="banner-title wow animate__animated animate__fadeInUp">Creating Supply Chain Efficiency
+                    </h1>
+                    <button class="btn btn-primary wow animate__animated animate__fadeInUp animate__delay0-5s"
+                    id="banner-enquiry">Book A Demo</button>
+                    <img class="img-fluid banner-img  wow animate__animated animate__fadeInDown animate__delay-2s"
+                        src="images/banner-img.png" alt="banner image">
+                </div>
+                <div class="banner-item">
+                    <h1 class="banner-title wow animate__animated animate__fadeInUp">Creating Supply Chain Efficiency
+                    </h1>
+                    <button class="btn btn-primary wow animate__animated animate__fadeInUp animate__delay0-5s"
+                    id="banner-enquiry">Book A Demo</button>
                     <img class="img-fluid banner-img" src="images/banner-img.png" alt="banner image">
                 </div>
                 <div class="banner-item">
-                    <h1 class="banner-title">Creating Supply Chain Efficiency</h1>
-                    <button class="btn btn-primary">Book A Demo</button>
-                    <img class="img-fluid banner-img" src="images/banner-img.png" alt="banner image">
-                </div>
-                <div class="banner-item">
-                    <h1 class="banner-title">Creating Supply Chain Efficiency</h1>
-                    <button class="btn btn-primary">Book A Demo</button>
+                    <h1 class="banner-title wow animate__animated animate__fadeInUp">Creating Supply Chain Efficiency
+                    </h1>
+                    <button class="btn btn-primary wow animate__animated animate__fadeInUp animate__delay0-5s"
+                    id="banner-enquiry">Book A Demo</button>
                     <img class="img-fluid banner-img" src="images/banner-img.png" alt="banner image">
                 </div>
             </div>
@@ -73,51 +83,36 @@
 
     <!-- what we do -->
     <section class="what-we-do">
-
         <div class="container">
             <div class="what-we-do-content">
-                <h2 class="title"><span>What we do?</span></h2>
-                <p>GrainChain creates innovative solutions to solve the complex challenges facing the global
+                <h2 class="title wow animate__animated animate__fadeInUp"><span>What we do?</span></h2>
+                <p class="wow animate__animated animate__fadeInUp ">GrainChain creates innovative
+                    solutions to solve the complex challenges facing the global
                     agricultural industry at every stage of the supply chain. We use cutting edge technology to make the
                     process easier, faster and safer for all participants.</p>
-                <button class="btn-play"><img src="images/play button Home Desktop Website GC-03.svg"
-                        alt="play btn"></button>
+                <button class="btn-play"><img src="images/play-btn.png" alt="play btn"></button>
             </div>
         </div>
     </section>
     <!-- what we do -->
-    <!-- <div class="bg-img">
-    <img src="images/Texture-right-Home-Desktop-Website-GC.png" alt="">
-</div> -->
+
+
     <!-- how does work -->
-    <section class="how-we-do">
+    <section class="how-we-do ">
         <img class="img-fluid" src="images/grey-bg-begining-Home-Desktop-Website-GC.png" alt="">
         <div class="how-we-do-inner">
             <div class="container">
-                <h2 class="title"><span>How do we do it</span> </h2>
-                <p class="text-center">The GrainChain system is capable of managing all pre and post-harvest processes
+                <h2 class="title wow animate__animated animate__fadeInUp"><span>How do we do it</span> </h2>
+                <p class="text-center wow animate__animated animate__fadeInUp  animate__delay-1s">The GrainChain system
+                    is
+                    capable of managing all pre and post-harvest processes
                     through a cloud-based, blockchain-enabled platform consisting of a suite of complimentary products
                 </p>
                 <div class="home-products">
                     <div class="row">
                         <div class="col-md-3 col-6">
                             <!-- home product -->
-                            <div class="home-product yellow">
-                                <img class="img-fluid" src="images/Trumod-button-off-Home-Desktop-Website-GC.png"
-                                    alt="trumodity">
-                                <!-- <img class="img-fluid hover" src="images/trumodity.png" alt=""> -->
-                                <div class="hover"></div>
-                                <div class="product-bottom yellow">
-                                    <img src="images/trumod-logo.png" alt="" class="bottom-logo img-fluid">
-                                    <h4 class="text-white">Transaction Platform</h4>
-                                </div>
-
-                            </div>
-                            <!-- home product -->
-                        </div>
-                        <div class="col-md-3 col-6">
-                            <!-- home product -->
-                            <div class="home-product green">
+                            <div class="home-product green wow animate__animated animate__fadeInUp  animate__delay-1s">
                                 <img class="img-fluid" src="images/Seed-audit-button-off-Home-Desktop-Website-GC.png"
                                     alt="seed audit">
                                 <!-- <img class="img-fluid hover" src="images/Seed-audit.png" alt=""> -->
@@ -130,9 +125,10 @@
                             </div>
                             <!-- home product -->
                         </div>
+
                         <div class="col-md-3 col-6 blue">
                             <!-- home product -->
-                            <div class="home-product blue">
+                            <div class="home-product blue wow animate__animated animate__fadeInUp  animate__delay-1s">
                                 <img class="img-fluid" src="images/ss-button-off-Home-Desktop-Website-GC.png"
                                     alt="silosys">
                                 <!-- <img class="img-fluid hover" src="images/silosys.png" alt=""> -->
@@ -146,9 +142,11 @@
                             </div>
                             <!-- home product -->
                         </div>
+
+
                         <div class="col-md-3 col-6">
                             <!-- home product -->
-                            <div class="home-product red">
+                            <div class="home-product red wow animate__animated animate__fadeInUp  animate__delay-1s">
                                 <img class="img-fluid" src="images/HarvX-button-off-Home-Desktop-Website-GC.png"
                                     alt="harvx">
                                 <!-- <img class="img-fluid hover" src="images/harvx.png" alt=""> -->
@@ -160,6 +158,24 @@
                             </div>
                             <!-- home product -->
                         </div>
+
+                        <div class="col-md-3 col-6">
+                            <!-- home product -->
+                            <div class="home-product yellow wow animate__animated animate__fadeInUp  animate__delay-1s">
+                                <img class="img-fluid" src="images/Trumod-button-off-Home-Desktop-Website-GC.png"
+                                    alt="trumodity">
+                                <!-- <img class="img-fluid hover" src="images/trumodity.png" alt=""> -->
+                                <div class="hover"></div>
+                                <div class="product-bottom yellow ">
+                                    <img src="images/trumod-logo.png" alt="" class="bottom-logo img-fluid">
+                                    <h4 class="text-white">Transaction Platform</h4>
+                                </div>
+
+                            </div>
+                            <!-- home product -->
+                        </div>
+
+
                     </div>
                 </div>
 
@@ -174,7 +190,7 @@
         <div class="container">
             <div class="how-does-it-works-content">
                 <div class="top">
-                    <h2 class="title"><span>How does it work?</span></h2>
+                    <h2 class="title wow animate__animated animate__fadeInUp"><span>How does it work?</span></h2>
                     <img class="img-fluid" src="images/HHOW-IT-WORKS-block-Home-Desktop-Website-GC.png" alt="">
                 </div>
                 <div class="work-process">
@@ -210,14 +226,20 @@
                     </div>
                 </div>
                 <div class="bottom">
-                    <h2 class="title"><span>Blockchain and Smart Contracts</span></h2>
-                    <h3>Fast and secure transactions for real commodities</h3>
-                    <p>GrainChain pairs the security and traceability of blockchain technology with the efficiency and
-                        reliability of self-executing smart contracts to ensure producers get paid quickly, buyers receive
+                    <h2 class="title wow animate__animated animate__fadeInUp"><span>Blockchain and Smart
+                            Contracts</span></h2>
+                    <h3 class="wow animate__animated animate__fadeInUp  animate__delay-1s">Fast and secure transactions
+                        for real commodities</h3>
+                    <p class="wow animate__animated animate__fadeInUp  animate__delay-2s">GrainChain pairs the security
+                        and traceability of blockchain technology with the efficiency and
+                        reliability of self-executing smart contracts to ensure producers get paid quickly, buyers
+                        receive
                         immediate tradable title to commodities, and lien holders and other payees are paid first.
-                         </p>
-                    <p>Our patent-pending solution is leveling the playing field for participants across the entire supply chain.</p>
-                    <div class="action">
+                    </p>
+                    <p class="wow animate__animated animate__fadeInUp  animate__delay-2s">Our patent-pending solution is
+                        leveling the playing field for participants across the entire
+                        supply chain.</p>
+                    <div class="action wow animate__animated animate__fadeInUp  animate__delay-2s">
                         <button class="btn btn-primary">Read More</button>
                     </div>
                 </div>
@@ -229,8 +251,11 @@
     <section class="our-partners">
         <div class="container">
             <div class="title-wrapper">
-                <h2 class="title"><span>Our Partners</span></h2>
-                <p>GrainChain has formed alliances and partnerships with governments, large corporations, and producers alike including:</p>
+                <h2 class="title wow animate__animated animate__fadeInUp  animate__delay-1s"><span>Our Partners</span>
+                </h2>
+                <p class="wow animate__animated animate__fadeInUp  animate__delay-2s">GrainChain has formed alliances
+                    and partnerships with governments, large corporations, and producers
+                    alike including:</p>
             </div>
             <!-- partner's list -->
             <ul class="partners-list owl-carousel owl-theme">
@@ -254,7 +279,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-6">
-                    <div class="stats-box">
+                    <div class="stats-box wow animate__animated animate__fadeInUp">
                         <img src="images/comoditity-stats.png" alt="">
                         <p>Our system has processed </p>
                         <h3>over 12 billion</h3>
@@ -262,7 +287,7 @@
                     </div>
                 </div>
                 <div class="col-md-3 col-6">
-                    <div class="stats-box">
+                    <div class="stats-box  wow animate__animated animate__fadeInUp  animate__delay-1s">
                         <img src="images/physical-operation-stats.png" alt="">
                         <p>Physical operations in </p>
                         <h3>3 countries</h3>
@@ -270,7 +295,7 @@
                     </div>
                 </div>
                 <div class="col-md-3 col-6">
-                    <div class="stats-box">
+                    <div class="stats-box  wow animate__animated animate__fadeInUp  animate__delay-2s">
                         <img src="images/processing-commodities-stats.png" alt="">
                         <p>Processing</p>
                         <h3>24 diﬀerent</h3>
@@ -278,7 +303,7 @@
                     </div>
                 </div>
                 <div class="col-md-3 col-6">
-                    <div class="stats-box">
+                    <div class="stats-box  wow animate__animated animate__fadeInUp  animate__delay-3s">
                         <img src="images/participants-stats.png" alt="">
                         <h3>Over 2500</h3>
                         <p>participants</p>
@@ -290,22 +315,23 @@
     <!-- company stats -->
 
     <!-- home contact -->
-    <section class="home-contact">
+    <section class="home-contact" id="bottom-contact">
         <div class="container">
             <form action="">
                 <!-- form -->
                 <div class="form-wrapper">
                     <div class="form-left">
-                        <h2 class="title"><span>Contact Us</span></h2>
-                        <div class="form-group">
+                        <h2 class="title wow animate__animated animate__fadeInUp"><span>Contact Us</span></h2>
+                        <div class="form-group   wow animate__animated animate__fadeInUp  animate__delay-1s">
                             <label for="">Name</label>
                             <input class="form-control" type="text" placeholder="Enter Your Name">
                         </div>
-                        <div class="form-group">
+                        <div class="form-group   wow animate__animated animate__fadeInUp  animate__delay-2s">
                             <label for="">Email</label>
                             <input class="form-control" type="email" placeholder="Enter Your Email">
                         </div>
-                        <div class="form-group captcha mt-5">
+                        <div
+                            class="form-group captcha mt-5   wow animate__animated animate__fadeInUp  animate__delay-3s">
                             <img class="img-fluid" src="images/captcha.png" alt="">
                         </div>
                     </div>
@@ -318,7 +344,7 @@
                             </div>
                         </div>
                         <div class="action">
-                            <div class=" captcha ">
+                            <div class=" captcha   wow animate__animated animate__fadeInUp  animate__delay-2s">
                                 <img class="img-fluid" src="images/captcha.png" alt="">
                             </div>
                             <button class="btn rounded-0 btn-primary w-100" type="submit">send message</button>
@@ -414,16 +440,20 @@
 
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js"
+        integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
         integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+
+    <!-- owlcarousel -->
     <script src="js/owl.carousel.min.js"></script>
+    <!-- wow js -->
+    <script src="js/wow.min.js"></script>
+    <!-- custom main js -->
     <script src="js/main.js"></script>
 </body>
 
