--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </h1>
                     <button class="btn btn-primary wow animate__animated animate__fadeInUp animate__delay0-5s"
                     id="banner-enquiry">Book A Demo</button>
-                    <img class="img-fluid banner-img  wow animate__animated animate__fadeInDown animate__delay-2s"
+                    <img class="img-fluid banner-img  wow animate__animated animate__fadeInDown animate__delay-1s"
                         src="images/banner-img.png" alt="banner image">
                 </div>
                 <div class="banner-item">
@@ -68,14 +68,16 @@
                     </h1>
                     <button class="btn btn-primary wow animate__animated animate__fadeInUp animate__delay0-5s"
                     id="banner-enquiry">Book A Demo</button>
-                    <img class="img-fluid banner-img" src="images/banner-img.png" alt="banner image">
+                    <img class="img-fluid banner-img  wow animate__animated animate__fadeInDown animate__delay-1s"
+                    src="images/banner-img.png" alt="banner image">
                 </div>
                 <div class="banner-item">
                     <h1 class="banner-title wow animate__animated animate__fadeInUp">Creating Supply Chain Efficiency
                     </h1>
                     <button class="btn btn-primary wow animate__animated animate__fadeInUp animate__delay0-5s"
                     id="banner-enquiry">Book A Demo</button>
-                    <img class="img-fluid banner-img" src="images/banner-img.png" alt="banner image">
+                    <img class="img-fluid banner-img  wow animate__animated animate__fadeInDown animate__delay-1s"
+                    src="images/banner-img.png" alt="banner image">
                 </div>
             </div>
         </div>
