--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="how-we-do-inner">
             <div class="container">
                 <h2 class="title wow animate__animated animate__fadeInUp"><span>How do we do it</span> </h2>
-                <p class="text-center wow animate__animated animate__fadeInUp  animate__delay0-5s">The GrainChain system
+                <p class="text-center wow animate__animated animate__fadeInUp  animate__delay-1s">The GrainChain system
                     is
                     capable of managing all pre and post-harvest processes
                     through a cloud-based, blockchain-enabled platform consisting of a suite of complimentary products
