--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
     <!-- how does work -->
     <section class="how-we-do ">
-        <img class="img-fluid" src="images/grey-bg-begining-Home-Desktop-Website-GC.png" alt="">
+        <img class="img-fluid w-100" src="images/grey-bg-begining-Home-Desktop-Website-GC.png" alt="">
         <div class="how-we-do-inner">
             <div class="container">
                 <h2 class="title wow animate__animated animate__fadeInUp"><span>How do we do it</span> </h2>
